Portfolio Page Complete with Three Media Tags

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,11 @@
     <head>
     <meta charset="UTF-8">
     <title>Ugonna's Portfolio</title>
+    <link rel="stylesheet" type"text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type"text/css" href="assets/css/style.css"
     </head>
 
-<body id="Portfolio_Body">
+<body>
     <header>
         <h1 id="Title">Ugonna Ojiaku</h1>
     
@@ -16,7 +17,7 @@
     
     </header>
 
-    <div class="Body" id="Portfolio_Body">
+    <div class="Body Portfolio_Body Portfolio_wrapper" id="wrapper">
         <h1 id="Subtitle">Portfolio</h1>
 
         <a href="#">
