Contact Page Complete with Three Media Tags

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <title>Contact Ugonna</title>
+    <link rel="stylesheet" type"text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type"text/css" href="assets/css/style.css">
     </head>
 
@@ -16,7 +17,7 @@
 
     </header>
 
-<div class="Body">
+<div class="Body" id="wrapper">
 <h2 id="Subtitle">Contact</h2>
 <p>Name</p>
     <input class="inputboxes" type="text" placeholder="John Smith">
@@ -31,5 +32,3 @@
     <footer>
     <p class="Text">Copyright</p>
     </footer>
-
-    <!-- Testing git on work computer -->
