Links Fixed on Index Page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <header>
     <h1 id="Title">Ugonna Ojiaku</h1>
 
-    <a id="LinkOne" href="index.html">About</a>
-    <a id="LinkTwo" href="portfolio.html">Portfolio</a>
-    <a id="LinkThree" href="contact.html">Contact</a>
+    <div class ="Links">
+    <a id="LinkAttributes" href="index.html">About</a>
+    <a id="LinkAttributes" href="portfolio.html">Portfolio</a>
+    <a id="LinkAttributes" href="contact.html">Contact</a>
+    </div>
 
     </header>
 
