--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Ugonna's Portfolio</title>
     <link rel="stylesheet" type"text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type"text/css" href="assets/css/style.css"
+    <link rel="stylesheet" type"text/css" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
 <body>
