--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,15 @@
     <div class="Body Portfolio_Body Portfolio_wrapper" id="wrapper">
         <h1 id="Subtitle">Portfolio</h1>
 
-        <a href="#">
+        <a href="https://uojiakux.github.io/Psychic_Game/">
         <img class="Pictures" id="Hangman" src="assets/images/Hangman.jpg"/>
-            <p class="Overlay_Text" id="HangmanOverlay">Hangman</p>
+            <p class="Overlay_Text" id="HangmanOverlay">Psychic Game</p>
+        </a>
         
+        <a href="https://uojiakux.github.io/unit-4-game/">
         <img class="Pictures" id="RPG" src="assets/images/RPG.jpg"/>
-            <p class="Overlay_Text" id="RPGOverlay">RPG Game</p>
+            <p class="Overlay_Text" id="RPGOverlay">Crystal Game</p>
+        </a>
         
         <img class="Pictures" id="Trivia" src="assets/images/Trivia.jpg"/>
             <p class="Overlay_Text" id="TriviaOverlay">Trivia Game</p>
