Added Trivia Game Link to Portfolio Page

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,10 @@
             <p class="Overlay_Text" id="RPGOverlay">Crystal Game</p>
         </a>
         
+        <a href="https://uojiakux.github.io/Trivia_Game/">
         <img class="Pictures" id="Trivia" src="assets/images/Trivia.jpg"/>
             <p class="Overlay_Text" id="TriviaOverlay">Trivia Game</p>
+        </a>
         
         <img class="Pictures" id="Rutgers" src="assets/images/Rutgers.jpg"/>
             <p class="Overlay_Text" id="RutgersOverlay">Rutgers Info Widget</p>
