Added Giphy Link to Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,10 @@
             <p class="Overlay_Text" id="TriviaOverlay">Trivia Game</p>
         </a>
         
+        <a href="https://uojiakux.github.io/Giphy_API/">
         <img class="Pictures" id="Rutgers" src="assets/images/Rutgers.jpg"/>
-            <p class="Overlay_Text" id="RutgersOverlay">Rutgers Info Widget</p>
+            <p class="Overlay_Text" id="RutgersOverlay">Giphy API</p>
+        </a>
         
         <img class="Pictures" id="Rock" src="assets/images/Rock.jpg"/>
             <p class="Overlay_Text" id="RockOverlay">Rock Paper Scissors</p>
